--- a/app/src/main/res/layout/layout_center_viewpager.xml
+++ b/app/src/main/res/layout/layout_center_viewpager.xml
@@ -7,7 +7,8 @@
         <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/viewpager_container">
+            android:id="@+id/viewpager_container"
+            >
 
 
         </androidx.viewpager.widget.ViewPager>
