--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -13,7 +13,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tabs"
-                android:background="@drawable/white_grey_border_bottom">
+                android:background="@color/white">
+                <!--android:background="@drawable/white_grey_border_bottom">-->
 
 
             </com.google.android.material.tabs.TabLayout>
