--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="grey">#bfbfbf</color>
     <color name="white">#fff</color>
+    <color name="black">#000</color>
+    <color name="link_blue">#4d94ff</color>
 </resources>
