Add account setting activity

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,8 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
-            layout="@layout/layout_center_profile"/>
+        <include layout="@layout/layout_center_profile"/>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
