--- a/app/src/main/res/layout/snippet_top_accountsettingtoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_accountsettingtoolbar.xml
@@ -4,30 +4,42 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/white_grey_border_bottom">
+
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/profileToolBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:id="@+id/profileToolBar">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/backArrow"
+                    android:src="@drawable/ic_backarrow"/>
+
                 <TextView
-                    android:id="@+id/username"
+                    android:layout_toRightOf="@+id/backArrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="vu.khanh2000"
+                    android:text="Options"
+                    android:textSize="20sp"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
-                <ImageView
-                    android:id="@+id/profileMenu"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_ellipses" />
+                    android:id="@+id/profileName"/>
+
+
+
             </RelativeLayout>
+
+
         </androidx.appcompat.widget.Toolbar>
+
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
 </merge>
