--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -41,7 +41,7 @@
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="25dp"
+                    android:layout_marginLeft="25dp"
                     android:layout_weight="25">
 
                     <de.hdodenhof.circleimageview.CircleImageView
