--- a/app/src/main/res/layout/fragment_signout.xml
+++ b/app/src/main/res/layout/fragment_signout.xml
@@ -35,7 +35,8 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true"
-        android:id="@+id/progressBar"/>
+        android:id="@+id/progressBar"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,6 +47,7 @@
         android:layout_alignRight="@+id/progressBar"
         android:layout_alignLeft="@+id/progressBar"
         android:textColor="@color/black"
+        android:layout_marginLeft="50dp"
         android:id="@+id/tvSigningOut"/>
 
 </RelativeLayout>
