--- a/app/src/main/res/layout/snippet_center_editprofile.xml
+++ b/app/src/main/res/layout/snippet_center_editprofile.xml
@@ -174,14 +174,14 @@
                     android:src="@drawable/ic_email"
                     android:layout_centerVertical="true"/>
 
-                <EditText
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/email"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="40dp"
                     android:background="@null"
-                    android:inputType="textNoSuggestions"
+                    android:textSize="18sp"
                     android:hint="Email"/>
 
             </RelativeLayout>
