--- a/app/src/main/res/drawable/grey_light_border_bottom.xml
+++ b/app/src/main/res/drawable/grey_light_border_bottom.xml
@@ -4,12 +4,12 @@
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="@color/grey"/>
+            <solid android:color="@color/light_grey"/>
         </shape>
     </item>
 
     <item
-        android:bottom="0.7dp">
+        android:bottom="0.5dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
         </shape>
