View profile user through search

--- a/app/src/main/res/layout/layout_bottom_navigation_view.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_view.xml
@@ -6,7 +6,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true">
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
+        <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/bottomNavViewBar"
@@ -14,8 +14,8 @@
             app:labelVisibilityMode="unlabeled"
             app:menu="@menu/bottom_navigation_menu">
 
-
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
+            
+        </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>
 
     </RelativeLayout>
 
