--- a/app/src/main/res/layout/layout_mainfeed_listitem.xml
+++ b/app/src/main/res/layout/layout_mainfeed_listitem.xml
@@ -63,19 +63,19 @@
                     android:id="@+id/heartLayout"
                     android:background="@color/white">
                     <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:id="@+id/image_heart_red"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginLeft="5dp"
                         android:src="@drawable/ic_heart_red"
                         android:visibility="invisible"/>
                     <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:id="@+id/image_heart"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginLeft="0dp"
                         android:src="@drawable/ic_heart_white"
                         android:visibility="visible"/>
                 </RelativeLayout>
@@ -84,7 +84,6 @@
                     android:layout_height="35dp"
                     android:id="@+id/speech_bubble"
                     android:layout_toRightOf="@+id/heartLayout"
-                    android:layout_marginLeft="10dp"
                     android:src="@drawable/ic_speech_bubble"
                     android:visibility="visible"
                     android:layout_centerVertical="true"/>
@@ -94,8 +93,10 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/relLayout3"
                 android:layout_below="@+id/relLayout2"
-                android:padding="20dp"
-                android:layout_marginBottom="50dp"
+                android:paddingTop="0dp"
+                android:paddingRight="20dp"
+                android:paddingLeft="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/white">
                 <TextView
                     android:layout_width="wrap_content"
@@ -110,23 +111,31 @@
                     android:textSize="18sp"
                     android:id="@+id/image_caption"
                     android:layout_below="@+id/image_likes"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="0dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/grey"
+                    android:textColor="@color/link_blue"
                     android:textSize="18sp"
+                    android:id="@+id/image_tags"
                     android:layout_below="@+id/image_caption"
-                    android:id="@+id/image_comments_link"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="0dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/grey"
                     android:textSize="18sp"
+                    android:layout_below="@+id/image_tags"
+                    android:id="@+id/image_comments_link"
+                    android:layout_marginTop="5dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/grey"
+                    android:textSize="13sp"
                     android:layout_below="@+id/image_comments_link"
                     android:id="@+id/image_time_posted"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="0dp"/>
             </RelativeLayout>
     </RelativeLayout>
 
