--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -33,7 +33,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:text="mitch.tabian"
                     android:layout_toRightOf="@+id/profile_photo"
                     android:layout_marginLeft="5dp"
                     android:layout_centerVertical="true"
@@ -74,20 +73,20 @@
                     android:background="@color/white">
 
                     <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:id="@+id/image_heart_red"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginLeft="0dp"
                         android:src="@drawable/ic_heart_red"
                         android:visibility="invisible"/>
 
                     <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:id="@+id/image_heart"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginLeft="0dp"
                         android:src="@drawable/ic_heart_white"
                         android:visibility="visible"/>
 
@@ -98,7 +97,7 @@
                     android:layout_height="35dp"
                     android:id="@+id/speech_bubble"
                     android:layout_toRightOf="@+id/heartLayout"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="0dp"
                     android:src="@drawable/ic_speech_bubble"
                     android:visibility="visible"
                     android:layout_centerVertical="true"/>
@@ -112,15 +111,14 @@
                 android:layout_below="@+id/relLayout2"
                 android:paddingTop="0dp"
                 android:paddingRight="20dp"
-                android:paddingLeft="20dp"
-                android:paddingBottom="20dp"
+                android:paddingLeft="10dp"
+                android:paddingBottom="5dp"
                 android:layout_marginBottom="50dp"
                 android:background="@color/white">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Liked by Khanh, Phong, Cat and 30 others"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:id="@+id/image_likes"/>
@@ -128,33 +126,36 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="something #khanh #android #instagram #clone"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:id="@+id/image_caption"
                     android:layout_below="@+id/image_likes"
-                    android:layout_marginTop="15dp"/>
-
+                    android:layout_marginTop="0dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="View all 3 comments"
-                    android:textColor="@color/grey"
+                    android:textColor="@color/link_blue"
                     android:textSize="18sp"
+                    android:id="@+id/image_tags"
                     android:layout_below="@+id/image_caption"
+                    android:layout_marginTop="0dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/grey"
+                    android:textSize="18sp"
+                    android:layout_below="@+id/image_tags"
                     android:id="@+id/image_comments_link"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="0dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3 DAYS AGO"
                     android:textColor="@color/grey"
-                    android:textSize="18sp"
+                    android:textSize="13sp"
                     android:layout_below="@+id/image_comments_link"
                     android:id="@+id/image_time_posted"
-                    android:layout_marginTop="15dp"/>
-
+                    android:layout_marginTop="5dp"/>
             </RelativeLayout>
 
         </RelativeLayout>
