--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -87,8 +87,9 @@
         <TextView
             android:id="@+id/textEditProfile"
             android:layout_width="156dp"
-            android:layout_height="18dp"
+            android:layout_height="30dp"
             android:text="Edit your profile"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:layout_marginTop="8dp"
