--- a/app/src/main/res/layout/snippet_top_view_profile.xml
+++ b/app/src/main/res/layout/snippet_top_view_profile.xml
@@ -1,6 +1,6 @@
-<merge xmlns:tools="http://schemas.android.com/tools"
-       xmlns:app="http://schemas.android.com/apk/res-auto"
-       xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,143 +13,165 @@
             android:id="@+id/tvPosts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="2dp"
             android:text="250"
             android:textColor="@color/black"
             android:textSize="18sp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textPosts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="-8dp"
             android:text="Posts"
             android:textSize="12sp"
-            android:layout_marginTop="-8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvPosts"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvPosts" />
 
         <TextView
             android:id="@+id/tvFollowers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="8dp"
             android:text="300"
             android:textColor="@color/black"
             android:textSize="18sp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="2dp"
-            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
-            android:layout_marginRight="8dp"
             app:layout_constraintLeft_toRightOf="@+id/tvPosts"
-            android:layout_marginLeft="8dp"
-            />
+            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textFollowers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="-8dp"
+            android:layout_marginRight="8dp"
             android:text="Followers"
             android:textSize="12sp"
-            android:layout_marginTop="-8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
+            app:layout_constraintHorizontal_bias="0.526"
             app:layout_constraintLeft_toRightOf="@+id/textPosts"
-            android:layout_marginLeft="8dp"
             app:layout_constraintRight_toLeftOf="@+id/textFollolwing"
-            android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.526"/>
+            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />
 
         <TextView
             android:id="@+id/tvFollowing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="8dp"
             android:text="400"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:layout_marginTop="2dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textFollolwing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="-22dp"
             android:text="Following"
             android:textSize="12sp"
-            android:layout_marginTop="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
-            android:layout_marginRight="-22dp"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />
+
+        <RelativeLayout
+            android:id="@+id/flow_wrap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/textFollowers">
+            <TextView
+                android:id="@+id/unfollow"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/unfollow_button"
+                android:gravity="center"
+                android:text="Unfollow"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/follow"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/follow_button"
+                android:gravity="center"
+                android:text="Follow"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/follow"
-            android:layout_width="156dp"
+            android:id="@+id/direct"
+            android:layout_width="100dp"
             android:layout_height="30dp"
-            android:text="Follow"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.0"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:background="@drawable/follow_button"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/unfollow"
-            android:layout_width="156dp"
-            android:layout_height="30dp"
-            android:text="Unfollow"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.0"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:background="@drawable/unfollow_button"
             android:layout_gravity="center_horizontal"
-            android:visibility="gone"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_toRightOf="@id/flow_wrap"
+            android:background="@drawable/grey_border"
+            android:gravity="center"
+            android:text="Message"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
+            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
             android:id="@+id/textEditProfile"
             android:layout_width="156dp"
-            android:layout_height="18dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/grey_border"
+            android:gravity="center"
             android:text="Edit your profile"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.0"
-            android:textAlignment="center"
-            android:background="@drawable/grey_border"
-            android:visibility="gone"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </merge>
