--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,28 +7,21 @@
         android:title="">
     </item>
 
-
     <item
         android:id="@+id/ic_search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/icon_search"
         android:title="">
     </item>
 
     <item
         android:id="@+id/ic_circle"
-        android:icon="@drawable/ic_circle"
-        android:title="">
-    </item>
-
-    <item
-        android:id="@+id/ic_alert"
-        android:icon="@drawable/ic_alert"
+        android:icon="@drawable/icon_plus"
         android:title="">
     </item>
 
     <item
         android:id="@+id/ic_profile"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/icon_profile"
         android:title="">
     </item>
 </menu>
