--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/relLayout1">
+            android:id="@+id/relLayout1"
+            android:layout_marginBottom="50dp">
 
             <include layout="@layout/snippet_top_main"/>
 
@@ -30,16 +31,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/relLayout2"
-            android:layout_below="@+id/relLayout1">
+            android:layout_marginTop="50dp"
+            android:layout_below="@id/relLayout1"
+            android:layout_above="@id/relLayout5">
 
             <include layout="@layout/layout_center_viewpager"/>
 
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/relLayout5">
+            <include layout="@layout/layout_bottom_navigation_view"/>
 
+
+        </RelativeLayout>
         <!-- bottom navigation -->
-        <include layout="@layout/layout_bottom_navigation_view"/>
 
 
     </RelativeLayout>
