--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,12 +8,14 @@
         android:layout_height="match_parent"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:paddingTop="50dp"
+        android:paddingBottom="50dp"
         android:background="@null"
         android:cacheColorHint="#00000000"
         android:listSelector="#00000000"
         android:dividerHeight="1px"
         android:scrollbars="none"
-        android:id="@+id/listView"
+        android:id="@+id/listViewHome"
         android:overScrollMode="never"
         android:fadingEdge="none"
         android:divider="@null"
