--- a/app/src/main/res/layout/snippet_top_main.xml
+++ b/app/src/main/res/layout/snippet_top_main.xml
@@ -21,7 +21,8 @@
                     android:layout_marginEnd="20dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/ivBackArrow"
-                    android:src="@drawable/instagram_logo"/>
+                    android:src="@drawable/instagram_logo"
+                    android:layout_marginRight="20dp" />
 
                 <ImageView
                     android:layout_width="30dp"
